Fix text overlapping by adjusting z-index and positioning

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,11 +39,14 @@ p{font-family: 'Tenor Sans', sans-serif;}
   min-height: 80vh;
   padding: 2rem;
   position: relative;
+  overflow: hidden;
 }
 
 .column1 {
   flex: 1;
   padding-right: 2rem;
+  position: relative;
+  z-index: 3;
 }
 
 .column2 {
@@ -52,33 +55,32 @@ p{font-family: 'Tenor Sans', sans-serif;}
   width: 100%;
   height: 100%;
   flex: 1;
+  z-index: 1;
 }
 
-.container h1{
-  gap:10px;
-  z-index: 1;
-  font-size:6rem;
+.container h1 {
+  font-size: 6rem;
   letter-spacing: .02cap;
-  margin-top:20px;
+  margin-top: 20px;
   color: #2F5A8D;
+  position: relative;
+  z-index: 3;
 }
 
 .container h2 {
-  grid-column: 1 / -1;
-  grid-row: 2;
-  gap:0px;
-  z-index:2;
-  margin-top:0px;
   font-size: 2rem;
+  margin-top: 0;
+  position: relative;
+  z-index: 3;
 }
 
-.container p{
-  z-index: 3;
-  display:flex;
+.container p {
+  display: flex;
   justify-content: left;
   align-items: left;
   padding-top: 30px;
-
+  position: relative;
+  z-index: 3;
 }
 
 .square {
@@ -90,7 +92,7 @@ p{font-family: 'Tenor Sans', sans-serif;}
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
-  z-index: 0;
+  z-index: 1;
   align-items: center;
   justify-content: center;
   overflow: hidden;
@@ -122,12 +124,16 @@ p{font-family: 'Tenor Sans', sans-serif;}
 #Clients {
   margin-top: 4rem;
   padding: 2rem;
+  position: relative;
+  z-index: 3;
 }
 
-#Clients h2{
-  margin-top: -13%;
+#Clients h2 {
+  margin-top: 0;
   font-size: 3rem;
   margin-left: 5%;
+  position: relative;
+  z-index: 3;
 }
 
 .arch{
@@ -210,12 +216,16 @@ a{
 #Services {
   margin-top: 4rem;
   padding: 2rem;
+  position: relative;
+  z-index: 3;
 }
 
 #Contact_Page {
   margin-top: 4rem;
   width: 100%;
   padding: 2rem;
+  position: relative;
+  z-index: 3;
 }
 
 @media (max-width:480px) {
